--- a/full-menu.html
+++ b/full-menu.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Menu | Roast & Co.</title>
 <link rel="stylesheet" href="full-menu.css">
-    <link rel="icon" type="page-image" href="img/cup-hot.png">
+    <link rel="icon" type="page-image" href="img/cup.png">
 
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=DM+Sans:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
@@ -14,14 +14,14 @@
  <header class="header">
         <nav class="navbar">
             <div class="logo">
-    <img src="img/cup-hot.png" alt="Roast & Co Logo" class="logo-img">
+                <a href="index.html">
+    <img src="img/cup.png" alt="Roast & Co Logo" class="logo-img">
 
     <div class="logo-text">
         Roast & Co.<br>
-        <span>Speciality Coffee Roasters</span>
+        <span>Speciality Coffee Roasters</span></a>
     </div>
 </div>
-
             <ul class="nav-optionss">
                 <li><a href="index.html#menu-section">Menu</a></li>
                 <li><a href="index.html#about">Our Story</a></li>
@@ -50,13 +50,9 @@
 <h1 class="head1">Espresso Drinks</h1>
 <p>Crafted with our signature house blend</p>
 </div>
-
 <div class="menu-grid">
-
-<!-- ESPRESSO -->
 <div class="menu-card">
 <img src="img/espresso.jpg" alt="Espresso">
-
 <div class="menu-info">
 <div class="menu-header">
 <h3>Espresso</h3>
@@ -65,9 +61,6 @@
 <p>Rich, bold, perfectly extracted</p>
 </div>
 </div>
-
-
-<!-- CORTADO -->
 <div class="menu-card">
 <img src="img/cortado.jpg" alt="Cortado">
 
@@ -292,8 +285,8 @@
 <div class="footer-top">
 <div class="social-media">
      <div class="social-content">
-        
-        <img src="img/cup-hot.svg" alt="logo" width="45px" height="45px">
+        <a href="index.html">
+        <img src="img/cup.svg" alt="logo" width="45px" height="45px"></a>
         <span class="roast" ><a href="#header">Roast & Co.</a></span>
     
      </div>
