--- a/shop.html
+++ b/shop.html
@@ -6,7 +6,7 @@
 <title>Shop Roast & Co.</title>
 
 <link rel="stylesheet" href="styleshop.css">
-    <link rel="icon" type="page-image" href="img/cup-hot.png">
+    <link rel="icon" type="page-image" href="img/cup.png">
 
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=DM+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
@@ -15,7 +15,8 @@
      <header class="header">
         <nav class="navbar">
             <div class="logo">
-    <img src="img/cup-hot.png" alt="Roast & Co Logo" class="logo-img">
+                <a href="index.html">
+    <img src="img/cup.png" alt="Roast & Co Logo" class="logo-img"></a>
     <div class="logo-text">
         <a href="index.html"> Roast & Co.</a><br>
        <a href="index.html"> <span>Speciality Coffee Roasters</span></a>
@@ -204,8 +205,8 @@ or physical cards available at our locations.
 <div class="footer-top">
 <div class="social-media">
      <div class="social-content">
-        
-        <img src="img/cup-hot.png" alt="logo" width="45px" height="45px">
+        <a href="index.html">
+        <img src="img/cup.png" alt="logo" width="45px" height="45px"></a>
         <span class="roast" ><a href="index.html">Roast & Co.</a></span>
     
      </div>
