--- a/location.html
+++ b/location.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Location</title>
         <link rel="stylesheet" href="styleloc.css">
-            <link rel="icon" type="page-image" href="img/cup-hot.png">
+            <link rel="icon" type="page-image" href="img/cup.png">
 
             <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
 </head>
@@ -13,7 +13,8 @@
      <header class="header">
         <nav class="navbar">
             <div class="logo">
-    <img src="img/cup-hot.png" alt="Roast & Co Logo" class="logo-img">
+                <a href="index.html">
+    <img src="img/cup.png" alt="Roast & Co Logo" class="logo-img"></a>
 
     <div class="logo-text">
         <a href="index.html"> Roast & Co.</a><br>
@@ -74,7 +75,7 @@
 
                 <p>📍 456 Alberta St, Portland, OR 97211</p>
                 <p>📞 (555) 234-5679</p>
-                <p>⏰ Mon–Fri 6:30am–6pm, Sat–Sun 7am–5pm</p>
+                <p>⏰ Mon-Fri 6:30am-6pm, Sat-Sun 7am-5pm</p>
 
                 <div class="location-tags">
                     <span>Drive-Thru</span>
@@ -96,7 +97,7 @@
 
                 <p>📍 789 Hawthorne Blvd, Portland, OR 97214</p>
                 <p>📞 (555) 234-5680</p>
-                <p>⏰ Daily 7am–7pm</p>
+                <p>⏰ Daily 7am-7pm</p>
 
                 <div class="location-tags">
                     <span>Dog Friendly Patio</span>
@@ -122,8 +123,9 @@
 <div class="footer-top">
 <div class="social-media">
      <div class="social-content">
-        
-        <img src="img/cup-hot.png" alt="logo" width="45px" height="45px">
+        <a href="index.html">
+        <img src="img/cup.png" alt="logo" width="45px" height="45px">
+        </a>
         <span class="roast" ><a href="index.html">Roast & Co.</a></span>
     
      </div>
