--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <div class="menu-info">
                     <div class="headprice">
                     <h3>Cortado</h3>
-                                    <span class="pricem">$4.50</span>
+                    <span class="pricem">$4.50</span>
                 </div>
                     <p>Equal parts espresso and steamed milk</p>
             </div>
@@ -349,10 +349,8 @@
         </div>
         
     <div class="all-coffee">
-          <a href="shop-all-coffee.html" class="sac-btn">Shop All Coffee </a>
+          <a href="shop.html" class="sac-btn">Shop All Coffee </a>
      </div>
-
-
 </section>
 <section class="rating">
     <div class="rating-title">
