--- a/shop.html
+++ b/shop.html
@@ -35,7 +35,6 @@
         </nav>
     </header>
  <section class="title">
-
     <div class="locations-heading">
         <h1>Shop Coffee</h1>
         <p>Fresh-roasted beans delivered to your door. Free shipping on orders over $50.
@@ -43,7 +42,6 @@
     </div>
 </section>
 <section class="products">
-
 <div class="container">
 <div>
 <h1>Coffee Beans</h1>
@@ -65,7 +63,7 @@
 <div class="product-card">
 <img src="img/colombia.jpg">
 <div class="product-info">
-<h3>Single Origin – Colombia</h3>
+<h3>Single Origin - Colombia</h3>
 <p>Medium roast with caramel sweetness and citrus finish</p>
 
 <div class="price-row">
@@ -87,7 +85,6 @@
 </div>
 </div>
 </div>
-
 </div>
 </div>
 </section>
