--- a/full-menu.html
+++ b/full-menu.html
@@ -286,7 +286,7 @@
 <div class="social-media">
      <div class="social-content">
         <a href="index.html">
-        <img src="img/cup.svg" alt="logo" width="45px" height="45px"></a>
+        <img src="img/cup.png" alt="logo" width="45px" height="45px"></a>
         <span class="roast" ><a href="#header">Roast & Co.</a></span>
     
      </div>
@@ -297,9 +297,9 @@
          </p>
      </div>
      <div class="social-icons">
-        <a href="#"><img src="img/Facebook.svg" alt="Facebook" width="40px" height="40px"></a>
-        <a href="#"><img src="img/instagram.svg" alt="Instagram" width="40px" height="40px"></a>
-        <a href="#"><img src="img/twitter-x.svg" alt="Twitter" width="40px" height="40px"></a>
+        <a href="#"><img src="img/facebook.png.svg" alt="Facebook" width="40px" height="40px"></a>
+        <a href="#"><img src="img/instagram.png" alt="Instagram" width="40px" height="40px"></a>
+        <a href="#"><img src="img/icons8-twitter-64.png" alt="Twitter" width="40px" height="40px"></a>
      </div>
      </div>
      <div class="all-contents">
