--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
              <div class="Order-online">
           <a href="shop.html" class="oo-btn">Order Online</a>
          </div>
-         
+
         </nav>
     </section>
    <section class="hero">
@@ -49,12 +49,9 @@
             Experience specialty coffee the way it was meant to be
             — fresh-roasted, expertly brewed, and served with care.
         </p>
-
         <a href="#menu-section" class="btn">View Our Menu</a>
         <a href="shop.html" class="Order-btn">Order Online</a>
     </div>
-
-
     <div class="home-img">
         <img src="img/home-img.jpg" alt="coffee">
     </div>
@@ -425,9 +422,9 @@
          </p>
      </div>
      <div class="social-icons">
-        <a href="#"><img src="img/Facebook.svg" alt="Facebook" width="40px" height="40px"></a>
-        <a href="#"><img src="img/instagram.svg" alt="Instagram" width="40px" height="40px"></a>
-        <a href="#"><img src="img/twitter-x.svg" alt="Twitter" width="40px" height="40px"></a>
+        <a href="#"><img src="img/facebook.png.svg" alt="Facebook" width="40px" height="40px"></a>
+        <a href="#"><img src="img/instagram.png" alt="Instagram" width="40px" height="40px"></a>
+        <a href="#"><img src="img/icons8-twitter-64.png" alt="Twitter" width="40px" height="40px"></a>
      </div>
     
      </div>
