--- a/location.html
+++ b/location.html
@@ -136,9 +136,9 @@
          </p>
      </div>
      <div class="social-icons">
-        <a href="#"><img src="img/Facebook.svg" alt="Facebook" width="40px" height="40px"></a>
-        <a href="#"><img src="img/instagram.svg" alt="Instagram" width="40px" height="40px"></a>
-        <a href="#"><img src="img/twitter-x.svg" alt="Twitter" width="40px" height="40px"></a>
+        <a href="#"><img src="img/facebook.png.svg" alt="Facebook" width="40px" height="40px"></a>
+        <a href="#"><img src="img/instagram.png" alt="Instagram" width="40px" height="40px"></a>
+        <a href="#"><img src="img/icons8-twitter-64.png" alt="Twitter" width="40px" height="40px"></a>
      </div>
     
      </div>
