location and espresso changes

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <p>Crafted with our signature house blend</p>
         <div class="menu-grid">
             <div class="menu-card">
-                <img src="img/espresso.jpg">
+                <img src="img/Espresso.jpg">
 
                 <div class="menu-info">
                     <div class="headprice">
