s of shop change

--- a/full-menu.html
+++ b/full-menu.html
@@ -27,7 +27,7 @@
                 <li><a href="index.html#about">Our Story</a></li>
                 <li><a href="index.html#origin">Process</a></li>
                 <li><a href="location.html">Locations</a></li>
-                <li><a href="Shop.html">Shop</a></li>
+                <li><a href="shop.html">Shop</a></li>
             </ul>
              <div class="Order-online">
           <a href="shop.html" class="oo-btn">Order Online</a>
