--- a/full-menu.html
+++ b/full-menu.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Menu | Roast & Co.</title>
-<link rel="stylesheet" href="full-menu.css">
+<link rel="stylesheet" href="./full-menu.css">
     <link rel="icon" type="page-image" href="img/cup.png">
 
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=DM+Sans:wght@300;400;500&display=swap" rel="stylesheet">
